// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders card with smaller padding correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-1tnu4kd-0 kvcKwc"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders centred card correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-1tnu4kd-0 iSvxw"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders centred card with smaller padding correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-1tnu4kd-0 cZrGKA"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-1tnu4kd-0 kFKoSY"
  >
    Test text
  </article>
</div>
`;
